====
News
====

..
  2014-10-21 Version 0.10.0 released
  ==================================

  Changes affecting backwards compatibility
  -----------------------------------------

  - ``system.fileHandle`` has been renamed to ``system.getFileHandle`` to
    prevent name conflicts with the new type ``FileHandle``.
  - Comments are now not part of the AST, as such you cannot use them in place
    of ``discard``.
  - Large parts of the stdlib got rid of the T/P type prefixes. Instead most
    types now simply start with an uppercased letter. The
    so called "partial case sensitivity" is now active allowing for code
    like ``var foo: Foo`` in more contexts.
  - String case (or any non-ordinal case) statements
    without 'else' are deprecated.
  - Recursive tuple types are not allowed anymore. Use ``object`` instead.
  - The PEGS module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.
  - The re module returns ``nil`` instead of ``""`` when an optional capture
    fails to match.

  Language Additions
  ------------------

  - The new concurrency model has been implemented including ``locks`` sections,
    lock levels and object field ``guards``.
  - The ``parallel`` statement has been implemented.
  - ``deepCopy`` has been added to the language.


  Compiler Additions
  ------------------

  - The compiler now supports *mixed* Objective C / C++ / C code generation:
    The modules that use ``importCpp`` or ``importObjc`` are compiled to C++
    or Objective C code, any other module is compiled to C code. This
    improves interoperability.
  - There is a new ``parallel`` statement for safe fork&join parallel computing.
  - ``guard`` and ``lock`` pragmas have been implemented to support safer
    concurrent programming.
  - The following procs are now available at compile-time::

      math.sqrt, math.ln, math.log10, math.log2, math.exp, math.round,
      math.arccos, math.arcsin, math.arctan, math.arctan2, math.cos, math.cosh,