@@ -1,74 +1,74 @@
 Forum
 =====
 
-The `Nimrod forum <http://forum.nimrod-code.org/>`_ is the place where most 
+The `Nim forum <http://forum.nim-lang.org/>`_ is the place where most 
 discussions related to the language happen. It not only includes discussions
-relating to the design of Nimrod but also allows for beginners to ask questions
-relating to Nimrod.
+relating to the design of Nim but also allows for beginners to ask questions
+relating to Nim.
 
 IRC
 ====
 
-Many Nimrod developers are a part of the
-`#nimrod IRC channel <http://webchat.freenode.net/?channels=nimrod>`_ on
-Freenode. That is the place where the rest of the discussion relating to Nimrod
-occurs. Be sure to join us there if you wish to discuss Nimrod in real-time.
-IRC is the perfect place for people just starting to learn Nimrod and we
+Many Nim developers are a part of the
+`#nim IRC channel <http://webchat.freenode.net/?channels=nim>`_ on
+Freenode. That is the place where the rest of the discussion relating to Nim
+occurs. Be sure to join us there if you wish to discuss Nim in real-time.
+IRC is the perfect place for people just starting to learn Nim and we
 welcome any questions that you may have!
 
 You may also be interested in reading the
-`IRC logs <http://build.nimrod-code.org/irclogs/>`_ which are an archive of all
+`IRC logs <http://build.nim-code.org/irclogs/>`_ which are an archive of all
 of the previous discussions that took place in the IRC channel.
 
 Github
 ======
 
-Nimrod's `source code <http://github.com/Araq/Nimrod>`_ is hosted on Github.
-Together with the `wiki <http://github.com/Araq/Nimrod/wiki>`_ and
-`issue tracker <http://github.com/Araq/Nimrod/issues>`_.
+Nim's `source code <http://github.com/Araq/Nim>`_ is hosted on Github.
+Together with the `wiki <http://github.com/Araq/Nim/wiki>`_ and
+`issue tracker <http://github.com/Araq/Nim/issues>`_.
 
-Github also hosts other projects relating to Nimrod. These projects are a part
-of the `nimrod-code organisation <http://github.com/nimrod-code>`_.
-This includes the `Babel package manager <http://github.com/nimrod-code/babel>`_
-and its `package repository <http://github.com/nimrod-code/packages>`_. 
+Github also hosts other projects relating to Nim. These projects are a part
+of the `nim-code organisation <http://github.com/nim-code>`_.
+This includes the `Babel package manager <http://github.com/nim-code/babel>`_
+and its `package repository <http://github.com/nim-code/packages>`_. 
 
 Twitter
 =======
 
-Follow us `@nimrodlang <http://twitter.com/nimrodlang>`_ for latest news about
-Nimrod.
+Follow us `@nimlang <http://twitter.com/nimlang>`_ for latest news about
+Nim.
 
 Reddit
 ======
 
-Subscribe to `/r/nimrod <http://reddit.com/r/nimrod>`_ for latest news about
-Nimrod.
+Subscribe to `/r/nim <http://reddit.com/r/nim>`_ for latest news about
+Nim.
 
 StackOverflow
 =============
 
-When asking a question relating to Nimrod, be sure to use the
-`Nimrod <http://stackoverflow.com/questions/tagged/nimrod>`_ tag in your 
+When asking a question relating to Nim, be sure to use the
+`Nim <http://stackoverflow.com/questions/tagged/nim>`_ tag in your 
 question.
 
 How to help
 ===========
 
 There are always many things to be done in the main
-`Nimrod repository <https://github.com/Araq/Nimrod>`_, check out the 
-`issues <https://github.com/Araq/Nimrod/issues>`_ for 
+`Nim repository <https://github.com/Araq/Nim>`_, check out the 
+`issues <https://github.com/Araq/Nim/issues>`_ for 
 things to do; pull requests are always welcome. You can
 also contribute to the many other projects hosted by the
-`nimrod-code <https://github.com/nimrod-code>`_ organisation on github. If you
+`nim-code <https://github.com/nim-code>`_ organisation on github. If you
 can't find anything you fancy doing, you can always ask for inspiration on IRC
-(irc.freenode.net #nimrod) or on the `Nimrod forums <http://forum.nimrod-code.org>`_.
+(irc.freenode.net #nim) or on the `Nim forums <http://forum.nim-code.org>`_.
 
 Donations
 ---------
 
 If you love what we do and are feeling generous then you can always donate.
 Contributions of any quantity are greatly appreciated and will contribute to
-making Nimrod even better!
+making Nim even better!
 
 Gittip
 ``````
