@@ -92,7 +92,7 @@ Nim plays nice with others
   the POSIX API, OpenGL, SDL, Cairo, Python, Lua, TCL, X11, libzip, PCRE, 
   libcurl, mySQL and SQLite are included in the standard distribution or
   can easily be obtained via the
-  `Babel package manager <https://github.com/nimrod-code/babel>`_.
+  `Nimble package manager <https://github.com/nimrod-code/nimble>`_.
 * A C to Nim conversion utility: New bindings to C libraries are easily 
   generated by ``c2nim``.
 
@@ -101,5 +101,5 @@ Roadmap to 1.0
 ==============
 
 Please have a look at
-this `wiki page <https://github.com/Araq/Nimrod/wiki/Roadmap>`_ for
+this `wiki page <https://github.com/Araq/Nim/wiki/Roadmap>`_ for
 an up-to-date overview.
